--- a/build.gradle
+++ b/build.gradle
@@ -27,5 +27,16 @@ targetCompatibility = 1.8
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
+
+    // Add support for OpenAPI spec generator
+    implementation('io.springfox:springfox-swagger2:2.9.2')
+    implementation('io.springfox:springfox-swagger-ui:2.9.2')
+
+    // Add lombok
+    annotationProcessor([group: 'org.projectlombok', name: 'lombok', version: '1.18.4'])
+    compileOnly([group: 'org.projectlombok', name: 'lombok', version: '1.18.4'])
+    testCompileOnly([group: 'org.projectlombok', name: 'lombok', version: '1.18.4'])
+
+
     testCompile("junit:junit")
 }
