add encryption logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 # By default listen to 8080 port if $PORT environment variable is not set.
 server.port=${PORT:8080}
 
+encryption.secretKey=${ENCRYPTION_SECRET_KEY:5135829007829672436882391716test}
+encryption.ivKey=${ENCRYPTION_IV_KEY:282390826613test}
